2010-08-17 Jerome Pasquier  <rainbru@free.fr>

	* src/tests/ogreGui/DrawableTestWithOgre: Contains Ogre-based unit tests.
	
	* src/tests/ogreGui/DrawableTest: SkinnableTexture-related tests work.

	* src/tests/helpers/OgreMinimalSetup.cpp (teardownOgre): Delete Pgre::Logger
	instance to prevent a segfault in second setup.

	* src/tests/helpers/OgreMinimalSetup.cpp (teardownOgre): Implementation finished.

	* src/tests/helpers/main.cpp: Simply use OgreMinimalSetup for valgrind tests.
	
	* src/tests/helpers/OgreMinimalSetup.cpp: Implementation started.
	* src/tests/helpers/OgreMinimalSetup.hpp: Implementation started.
	* src/Makefile.am (SUBDIRS): added helpers and oreGui.

2010-08-14 Jerome Pasquier  <rainbru@free.fr>

	* src/ogreGui/TextureNotFoundException: Implementation.

2010-07-24 Jerome Pasquier  <rainbru@free.fr>

	* src/ogreGui/Drawable.cpp (setSkinName): if vSkinName is empty, take
	the parent skin name.

	* src/ogreGui/Drawable.cpp (getSkinName): implementation.
	* src/ogreGui/Drawable.cpp (setTexturePtr): implementation.
	* src/ogreGui/Drawable.cpp (getTexturePtr): implementation.

2010-07-24 Jerome Pasquier  <rainbru@free.fr>

	* src/maincore/gameengine.cpp (getGuiTransparency): get 
	mGuiTransparency member value.
	* src/maincore/gameengine.cpp (setGuiTransparency): change 
	mGuiTransparency member value.
	* src/maincore/gameengine.cpp (draw): Draw the actual game state.

	* src/maincore/gameengine.cpp (cleanup): Delete mBrush.
	* src/maincore/gameengine.cpp (initOgre): Instantiate mBrush.
	* src/maincore/gameengine.h (mBrush, mGuiTransparency): Members added.
		
	* src/ogreGui/Brush.cpp (Brush): Implement a default constructor
	for unit tests purpose.

	* src/ogreGui/Brush.hpp (tBrushState): Change prefix to BRS.
	
2010-07-23 Jerome Pasquier  <rainbru@free.fr>

	* src/test/ogreGui/Makefile.am: Added include flag for maincore
	due to BrushTest.

	* src/maincore/gamestate.cpp (draw): Calls mContainer::draw() if 
	mContainer::isDirty().