@@ -115,7 +115,10 @@ A system that serialize widgets position and configuration
    FT is the ROADMAP file time (C-c C-x C-d)
 
 * v0.0.5-205 (16 aug 2010 - ???) SLOC ??? UT ??? FT ??:??
-- (6) Separated DrawableTest and DrawableTestWithOgre
+- (8) Fixed manu build issue in gsMainMenu
+   switching to oldOgreGui to OgreGui
+- Window implementation
+- Separated DrawableTest and DrawableTestWithOgre
 - DrawableTest SkinnableTexture-related tests work
 - DrawableTest::testLoadTextureThrow works
 - DrawableTest::testLoadTexture works
